--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -21,15 +21,22 @@ body {
     background-color: #212F3C;
 }
 
+/* Navigation Bar Styles */
 nav {
     overflow: hidden; /* Ensure no overflow occurs */
     background: black;
-    opacity: .7;
+    opacity: 0.7;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px; /* Control height with padding */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
+    position: fixed; /* Make the navbar fixed */
+    top: 0;
+    left: 0;
+    width: 100%; /* Ensure the navbar spans the full width */
+    height: 60px; /* Set a fixed height */
+    z-index: 1000; /* Ensure it stays above other elements */
 }
 
 nav h2 {
@@ -60,6 +67,11 @@ nav ul li a {
 
 nav ul li a:hover {
     background: #34495E;
+}
+
+/* Ensure the content below the navbar is not hidden */
+body {
+    padding-top: 80px; /* Increase padding to push content below the navbar */
 }
 
 /* Container Styles */
@@ -213,7 +225,7 @@ canvas {
 
 .blog-img {
     width: 100%;
-    height: 200px; /* Set a fixed height for all images */
+    height: 700px; /* Set a fixed height for all images */
     overflow: hidden;
 }
 
@@ -332,4 +344,30 @@ canvas {
     color: #AF7AC5;
     font-size: 1.2rem;
     font-family: 'Playfair Display';
+}
+
+/* Search Bar Styles */
+#search-bar {
+    margin-bottom: 20px;
+}
+
+#search-form {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    margin-top: 70px; /* Add margin-top to move the search bar down */
+}
+
+#search-input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+#search-input:focus {
+    outline: none;
+    border-color: dodgerblue;
 }
